@@ -3,10 +3,13 @@
 The format is based on [Keep a Changelog](http://keepachangelog.com/).
 
 ## [Unreleased]
+### Changed
+- dressfree.net 의 domain 이 dressfree.net 에서 www.dressfree.net 으로 변경됨
+- http protocol 에서 https 로 변경됨
 
 ## [v0.1.2] - Tue, 09 Jul 2019 20:15:57 +0900
 
-### Chaned
+### Changed
 - 인증서 만료로 인해 API URL scheme 을 http 로 변경 (#1585)
 
 ## [v0.1.1]
